// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumb.Item /> renders correctly when an href prop is passed 1`] = `
.c0 {
  font-size: 14px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  color: rgba(2,108,223,1);
  -webkit-text-decoration: none;
  text-decoration: none;
}

<li
  itemProp="itemListElement"
  itemScope={true}
  itemType="http://schema.org/ListItem"
>
  <a
    className="c0"
    color=""
    href="/"
    itemProp="item"
    rel="_self"
    target=""
  >
    Home
  </a>
  <meta
    content="Home"
    itemProp="name"
  />
  <meta
    content="1"
    itemProp="position"
  />
</li>
`;

exports[`<Breadcrumb.Item /> renders correctly when no href prop is passed 1`] = `
.c0 {
  font-size: 14px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
}

<li
  itemProp="itemListElement"
  itemScope={true}
  itemType="http://schema.org/ListItem"
>
  <div
    className="c0"
    href=""
    itemProp="item"
  >
    Home
  </div>
  <meta
    content="Home"
    itemProp="name"
  />
  <meta
    content="1"
    itemProp="position"
  />
</li>
`;
